adding javafx plugin